--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "10.0.5",
     "next-pwa": "^5.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {}
 }
