--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
     "firebase": "^8.2.8",
     "next": "10.0.5",
     "next-pwa": "^5.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-query": "^3.9.8",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {}
