--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.5.0",
+    "@svgr/core": "^5.5.0",
+    "@svgr/webpack": "^5.5.0",
+    "axios": "^0.21.1",
     "firebase": "^8.2.8",
+    "framer-motion": "^3.6.7",
+    "merge-images": "^2.0.0",
     "next": "10.0.5",
     "next-pwa": "^5.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-intersection-observer": "^8.31.0",
     "react-query": "^3.9.8",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
